--- a/index.html
+++ b/index.html
@@ -1,55 +1,71 @@
- <!DOCTYPE html>
-
+<!DOCTYPE HTML>
 <html lang="it">
 <head>
-      <meta charset="UTF-8">
-      <meta name="author" content="StudioWeb&Style srl">
-      <meta name="descritpion" content="Associazione Bosco Antico di Castelrocco, ente di volontariato che persegue finalità ambientali">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Asscociazione Bosco Antico</title>
-  </head>
-  <body>
-      <!--Intestazione-->
-      <a href="index.html">                   <!--Immagine del logo ipertestuale-->  
-            <img id="logo" src="image/logo-nome.png" style="width:50px; height:40px" alt="Il logo è formato dal disegno di un albero di quercia con la scritta Asscociazione Bosco Antico">
-      </a>
-      <h1>Associazione Bosco Antico di Castelrocco</h1>
-     
-      <!--Contenuto-->
-      <h2>Salvaguardiamo il nostro bosco</h2>
+<meta charset="utf-8">
+<meta name="viewport" content="width=deyice-width, initial-scale=1">
+<title>CURRICULUM VITAE DI VINCENT OCCHIOGROSSO</title>
+<style>
+     {
+     	font-family: Verdana;
+     	font-size: 10pt;
+     }
+     td.special{
+     	text-align: justify;
+     	vertical-align: top;
+     }
+ </style>
+</head>
+<body>
+	<table width="100%" cellspacing="3" cellpedding="0" border="0">
+	   <tr>
+	   	<td style="border: 2px solid ;">
+	   		<p align="center">CURRICULUM VITAE E STUDIORUM di <strong>VINCENT OCCHIOGROSSO</strong></p>
+	   	</td>
+	   </tr>
+	   <tr>
+	   	<td style="border: 2px dotted;">
+	   		<table width="100%" border="0">
+	   			<tr>
+	   				<td class="special" style="text-align: center ; border: 2px solid;"><img src="foto_tessera.jpg" width="200px"></td>
+	   				<td class="special" style="text-align: center;"></td>
+	   				<td class="special " rowspan="3" width="75%" style="background-color: rgb(220, 220, 220);">
+	   					<p align="justify">
+	   						<h2>Biografia</h2> Mi chiamo Vincent Occhiogrosso ho 16 anni vivo in Italia  e abito a Sannicandro di Bari. I miei hobby , giocare a calcio, uscire con gli amici, guardare film o serie tv e andare in palestra.
+	   						<h2>Studi</h2> frequento il terzo anno dell'Istituto Tecnico informatico Colamonico Chiarulli. 
+	   						<h2>Conoscenze e Competenze</h2> le mie conoscenze sono nel campo edile e informatiche basi, le mie competenze sono: nell conduzione di mezzi da lavoro edili.
+	   						<h2>Prospettive e Progetti</h2> le mie prospettive sono diventare calciatore professionista i miei progetti sono  di studiare all'estero nell'ambito sportivo o lavorare in una azienda informatica.  
+                      </p>
+	   				</td>
+	   			</tr>
+	   			<tr>
+	   				<td class="special" style="background-color: rgb(200, 200, 200) ;">
+	   					<h3>In breve</h3> sono una persona dinamica pronta a lavorare in gruppo aperta alle idee altrui non mi spavento nessun tipo di lavoro,essere organizzativo e competente in quello che mi viene chiesto.
+	   				</td>
+	   				<td class="special" style="text-align: center;"></td>
+	   			</tr>
+	   			<tr> 
+	   			  <td class="special" style="background-color: rgb(200,200, 200);">
+	   			  	<h3>Contatti</h3> per comunicazioni contattarmi al 3394601637 o email vincentocchiogrosso@icloud.com
+	   			  </td>
+	   			  <td class="special" style="text-align:center;"></td>
+	   			</tr>
+	   		</table>
+	   	</td>
+	   	<tr>
+	   		<td style="border: 2px doshed; border-color: blue ;">
+	   			<p align="right"><strong> Vincent Occhiogrosso</strong>, <i>Data: 16 dicembre 2023</i></p>
+	   		</td>
+	   	</tr>
+	   </table>
+	</body>
+	</html>
 
-      <p>
-            Il Bosco Antico si estende su una superficie di 11.754 ettari.
-            La parte più vetusta è il querceto in cui si trovano esemplari di centinaia di anni.
-              La quercia più vecchia risulta avere ben 274 anni!
-            </p>
-            <p>
-                  Sono molti i visitatori che ogni anno percorrono i sentieri del bosco:
-                  Il nostro obiettivo è salvaguardare la biodiversita e mantenere pulito il bosco.
-            </p>
-            <a href="bosco-cura.html">
-                  <!--Immagine e testo ipertestuali-->
-                  <img src="image/foresta.jpg" alt="foto con gli altri del bosco" style="width:350px; height:200px">
-                  &nbsp;&nbsp; Viviamo il bosco!
-            </a>
-            <hr>
-            <h3>Unisciti a noi,diventa volontario</h3>
-            <p>La nostra è un associazione di volontariato nata con l'obiettivo di 
-                  salvaguardare il Bosco Antico.<p>
-            <p>Vieni a trovarci in sede. Se hai meno di 16 anni vieni con i tuoi genitori.</p>
-            <img src="image/volontari.jpg" alt="Gruppo di giovani volontari abbracciati
-            presi di spalle" width=350 height=230>
-            <img src="image/ragazza-bosco.jpg" alt="Una ragazza volontaria nel bosco per la 
-            raccolta rifiuti" width=350 height=230>
 
-            <!--Piè di pagina-->
-            <h3>Dove siamo</h3>
-            <p>
-               "Associazione Bosco Antico di Castelrocco"<br>
-               Strada Comunale della Valle 5 - Castelrocco<br>
-               e-mail: <a href="mailto:inf@boscoantico.it">info@boscoantico.it</a>
-               telefono: +393358361724
-               </p>
 
-  </body>
-  </html>
+
+
+
+
+
+	   		
+
