--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	   			</tr>
 	   			<tr> 
 	   			  <td class="special" style="background-color: rgb(200,200, 200);">
-	   			  	<h3>Contatti</h3> per comunicazioni contattarmi al 3394601637 o email vincentocchiogrosso@icloud.com
+	   			  	<h3>Contatti</h3>
 	   			  </td>
 	   			  <td class="special" style="text-align:center;"></td>
 	   			</tr>
@@ -53,19 +53,9 @@
 	   	</td>
 	   	<tr>
 	   		<td style="border: 2px doshed; border-color: blue ;">
-	   			<p align="right"><strong> Vincent Occhiogrosso</strong>, <i>Data: 16 dicembre 2023</i></p>
+	   			<p align="right"><strong> Vincent Occhiogrosso</strong>, <i>Data: 14 febbraio 2023</i></p>
 	   		</td>
 	   	</tr>
 	   </table>
 	</body>
 	</html>
-
-
-
-
-
-
-
-
-	   		
-
